# code

./: .travis.yml  CMakeLists.txt  inexor_unix  server.bat
src/: CMakeLists.txt  readme.md
src/client/: CMakeLists.txt
src/engine/: engine.h  main.cpp  octaedit.cpp  rendergl.cpp  server.cpp  shader.cpp  texture.cpp  worldio.cpp
src/fpsgame/: entities.cpp  fps.cpp  weapon.cpp
src/libraries/: CMakeLists.txt
src/net/: CMakeLists.txt  MCByteBuffer.cpp  MCHub.cpp  MCHub.h  MCSocket.h  MCSocketServer.cpp  MCStreamChopper.h
src/rpc/: CMakeLists.txt  InexorServiceImpl.h  MCRpcServer.cpp  MCRpcServer.h  rpc.cpp  rpc.h
src/shared/: iengine.h  tools.cpp
src/test/net/: DuplexMCTest.h  SimplexMCTest.h  helpers.cpp  helpers.h
src/ui/: CMakeLists.txt
src/util/: CMakeLists.txt  StringFormatter.cpp  util.h
tool/: travis.sh
